Hotel and Singel

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -195,7 +195,7 @@ header .sign i{
 
 .home{
     height: 100vh;
-    background-image: url(../images/WhatsApp\ Image\ 2025-03-03\ at\ 18.40.52_baa6ee7c.jpg);
+    /* background-image: url(../images/WhatsApp\ Image\ 2025-03-03\ at\ 18.40.52_baa6ee7c.jpg); */
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
