--- a/src/Rpeat/Rpeat.css
+++ b/src/Rpeat/Rpeat.css
@@ -1,6 +1,6 @@
 .home7{
     height: 100vh;
-    background-image: url(../images/gouna\ hotels.jpeg);
+    background-image: url(../images/WhatsApp\ Image\ 2025-03-03\ at\ 18.40.52_baa6ee7c.jpg);
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
